Modify camera button size.

--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
     #callCamera {
       background-color:transparent;
       border:0px;
-      width:120px;
-      height:120px;
+      outline:0px;
+      width:80px;
+      height:80px;
       position:fixed;
       right:0;
       bottom:0;
-      z-index:9;
+      z-index:5;
     }
 
     #cameraImage {
-      width:100px;
+      width:60px;
     }
   </style>
   <body>
