[Wuseok] change Images

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    <!----------------------------------------------- NAVI -------------------------------------->
     <div class="ui segment" id="top">
       <div class="ui sticky">
-        <div class="ui orange fluid three item inverted menu">
+        <div class="ui green fluid three item inverted menu">
           <a class="item" href="#top">TOP</a>
           <a class="item" href="#map">MAP</a>
           <a class="item" href="#gallery">GALLERY</a>
