[Wuseok] Naver api and location changed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dongjin Na and Soyoung Kim's wedding!</title>
+    <title>Wuseok and Hyelim Wedding!</title>
     <link rel="manifest" href="../manifest.json">
     <script src="../authorization/authorization.js"></script>
     <script src="../order/order.js"></script>
@@ -17,7 +17,7 @@
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>
     <script src="/wedding/ui/semantic.min.js"></script>
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=p6I0cSqRjuBeMPOpkqR6"></script>
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=mgRoBr1wByQjKpOl8p5s"></script>
   </head>
   <style type="text/css">
     #callCamera {
@@ -71,12 +71,12 @@
       <div id="naver_map" style="width:100%;height:300px;"></div>
       <script>
         var mapOptions = {
-          center: new naver.maps.LatLng(37.496978, 127.0267254),
+          center: new naver.maps.LatLng(37.495998, 127.032885),
           zoom: 10
         };
         var map = new naver.maps.Map('naver_map', mapOptions);
         var marker = new naver.maps.Marker({
-          position: new naver.maps.LatLng(37.496978, 127.0267254),
+          position: new naver.maps.LatLng(37.495998, 127.032885),
           map: map
         });
       </script>
