Apply resize image

--- a/index.html
+++ b/index.html
@@ -117,42 +117,42 @@
         </div>
        <div class="card">
           <div class="image">
-            <img src="/wedding/images/studio/studio_1.jpg">
+            <img src="/wedding/images/studio/studio_1_1024x768.png">
           </div>
         </div>
         <div class="card">
           <div class="image">
-            <img src="/wedding/images/studio/studio_2.jpg">
+            <img src="/wedding/images/studio/studio_2_1024x768.png">
           </div>
         </div>
         <div class="card">
           <div class="image">
-            <img src="/wedding/images/studio/studio_3.jpg">
+            <img src="/wedding/images/studio/studio_3_1024x768.png">
           </div>
         </div>
         <div class="card">
           <div class="image">
-            <img src="/wedding/images/studio/studio_4.jpg">
+            <img src="/wedding/images/studio/studio_4_1024x768.png">
           </div>
         </div>
         <div class="card">
           <div class="image" >
-            <img src="/wedding/images/studio/studio_5.jpg">
+            <img src="/wedding/images/studio/studio_5_1024x768.png">
           </div>
         </div>
         <div class="card">
           <div class="image ">
-            <img src="/wedding/images/studio/studio_6.jpg">
+            <img src="/wedding/images/studio/studio_6_1024x768.png">
           </div>
         </div>
         <div class="card">
           <div class="image">
-            <img src="/wedding/images/studio/studio_7.jpg">
+            <img src="/wedding/images/studio/studio_7_1024x768.png">
           </div>
         </div>
         <div class="card">
           <div class="image ">
-            <img src="/wedding/images/studio/studio_8.jpg">
+            <img src="/wedding/images/studio/studio_8_1024x768.png">
           </div>
         </div>
   </div>
